# Sem2

LR1/Task1/: CMakeLists.txt  carwindow.cpp  carwindow.h  figurewindow.cpp  figurewindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moverect.cpp
LR1/Task2/Task2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
LR1/Task2/Task2/figures/: figureCircle.h  figureHexagon.h  figurePolyline.h  figureRhombus.h  figureSquare.h  figureTriangle.h  figures.h
LR1/Task2/Task2/figures/figureStar/: star.cpp  star.h  star_5.h  star_6.h  star_7.h  star_8.h
LR2/Task1/: CMakeLists.txt  file.txt  file1.txt  main.cpp  mainWindow.cpp  mainWindow.h  workWithDate.cpp  workWithDate.h
LR2/Task2/: CMakeLists.txt  editWindow.cpp  editWindow.h  mainWindow.cpp  mainWindow.h  projectClass.cpp  projectClass.h
LR2/Task3/: main.cpp
LR2/Task4/: main.cpp
LR3/Task1/: main.cpp
LR3/Task2/: main.cpp
LR3/Task3/: main.cpp
LR3/Task4/: main.cpp
LR3/Task5/: CMakeLists.txt  Calculate.cpp  main.cpp  mainwindow.cpp
LR3/Task5_1/: Calculate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR4/Task1/: main.cpp
LR4/Task2/: main.cpp
LR4/Task3/: main.cpp
LR4/Task5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR4/my_struct/: iterator.h  pair.h  vector.h
